--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -100,9 +100,9 @@
 
 * 36 著作財產權得全部或部分讓與他人或與他人共有。著作財產權之受讓人，在其受讓範圍內，取得著作財產權。著作財產權讓與之範圍依當事人之約定；其約定不明之部分，推定為未讓與。
 
-* 37 著作財產權人得授權他人利用著作，其授權利用之地域、時間、內容、利用方法或其他事項，依當事人之約定；其約定不明之部分，推定為未授權。前項授權不因著作財產權人嗣後將其著作財產權讓與或再為授權而受影響。非專屬授權之被授權人非經著作財產權人同意，不得將其被授與之權利再授權第三人利用。專屬授權之被授權人在被授權範圍內，得以著作財產權人之地位行使權利，並得以自己名義為訴訟上之行為。著作財產權人在專屬授權範圍內，不得行使權利。第二項至前項規定，於中華民國九十年十一月十二日本法修正施行前所為之授權，不適用之。音樂著作經授權重製於電腦伴唱機者，利用人利用該電腦伴唱機公開演出該著作，不適用第七章規定。但屬於著作權仲介團體管理之音樂著作，不在此限。
+* 37 著作財產權人得授權他人利用著作，其授權利用之地域、時間、內容、利用方法或其他事項，依當事人之約定；其約定不明之部分，推定為未授權。前項授權不因著作財產權人嗣後將其著作財產權讓與或再為授權而受影響。非專屬授權之被授權人非經著作財產權人同意，不得將其被授與之權利再授權第三人利用。專屬授權之被授權人在被授權範圍內，得以著作財產權人之地位行使權利，並得以自己名義為訴訟上之行為。著作財產權人在專屬授權範圍內，不得行使權利。第二項至前項規定，於中華民國九十年十一月十二日本法修正施行前所為之授權，不適用之。有下列情形之一者，不適用第七章規定。但屬於著作權集體管理團體管理之著作，不在此限：一、音樂著作經授權重製於電腦伴唱機者，利用人利用該電腦伴唱機公開演出該著作。二、將原播送之著作再公開播送。三、以擴音器或其他器材，將原播送之聲音或影像向公眾傳達。四、著作經授權重製於廣告後，由廣告播送人就該廣告為公開播送或同步公開傳輸，向公眾傳達。
 
-> 釋：一、第二項修正。按九十年十一月十二日修正公布之本法規定，授權「經公證人作成公證書」，不因著作財產權人嗣後將其著作財產權讓與或再為授權而受影響，此一規定易產生「如授權未經公證人作成公證書，將因嗣後著作財產權人將其著作財產權讓與或再為授權而受影響」之解讀，為免引起有違伯恩公約第五條第二項所定「著作權之享有與行使不得要求履行一定形式要件」之爭議，爰予刪除。二、第四項修正。原條文規定，專屬授權之被授權人在被授權範圍內，得以著作財產權人之地位行使權利，惟其得否以自己名義為訴訟上之行為，並不明確，滋生爭議，爰予修正明定。三、第五項酌作修正。按第二項至第四項係於中華民國九十年十一月十二日修正增訂，原條文第五項所稱「本法修正施行前」，應配合修正為「於中華民國九十年十一月十二日本法修正施行前」。
+> 釋：一、第一項至第五項未修正。二、第六項修正。原條文第六項所定「著作權仲介團體」，其性質並非居間、仲介，名為「仲介」，於實務運作上容易產生誤解；另立法當時所參考之日本「仲介業務法」已廢止，改由「著作權等管理事業法」所取代，復查目前國際上亦稱之為「著作權集體管理組織」（collective management organization of copyright and related rights），為順應國際潮流並使規範對象更為明確，爰將「著作權仲介團體」修正為「著作權集體管理團體」。三、第六項第四款：「著作經授權重製於廣告後，由廣告播送人就該廣告為公開播送或同步公開傳輸，向公眾傳達。」
 
 * 38 （刪除）
 
@@ -236,13 +236,13 @@
 
 > 釋：照黨團協商條文通過。
 
-* 81 著作財產權人為行使權利、收受及分配使用報酬，經著作權專責機關之許可，得組成著作權仲介團體。專屬授權之被授權人，亦得加入著作權仲介團體。第一項團體之許可設立、組織、職權及其監督、輔導，另以法律定之。
+* 81 著作財產權人為行使權利、收受及分配使用報酬，經著作權專責機關之許可，得組成著作權集體管理團體。專屬授權之被授權人，亦得加入著作權集體管理團體。第一項團體之許可設立、組織、職權及其監督、輔導，另以法律定之。
 
-> 釋：一、將第一項「主管機關」，修正為「著作權專責機關」。二、增訂第二項，專屬授權之被授權人，亦得加入著作權仲介團體。三、原條文第二項，移列為第三項。
+> 釋：一、將原條文第一項及第二項所定「著作權仲介團體」修正為「著作權集體管理團體」，修正理由同修正條文第三十七條說明二。二、第三項未修正。
 
-* 82 著作權專責機關應設置著作權審議及調解委員會，辦理下列事項：一、第四十七條第四項規定使用報酬率之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第三款所定爭議之調解，其涉及刑事者以告訴乃論罪之案件為限。
+* 82 著作權專責機關應設置著作權審議及調解委員會，辦理下列事項：一、第四十七條第四項規定使用報酬率之審議。二、著作權集體管理團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第三款所定爭議之調解，其涉及刑事者，以告訴乃論罪之案件為限。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、將原條文第一項第二款所定「著作權仲介團體」修正為「著作權集體管理團體」，修正理由同修正條文第三十七條說明二。二、第二項未修正。
 
 * 82.1 著作權專責機關應於調解成立後七日內，將調解書送請管轄法院審核。前項調解書，法院應儘速審核，除有違反法令、公序良俗或不能強制執行者外，應由法官簽名並蓋法院印信，除抽存一份外，發還著作權專責機關送達當事人。法院未予核定之事件，應將其理由通知著作權專責機關。
 
