證券交易法 2010.5.4

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -100,9 +100,9 @@
 
 * 21 本法規定之損害賠償請求權，自有請求權人知有得受賠償之原因時起二年間不行使而消滅；自募集、發行或買賣之日起逾五年者亦同。
 
-* 21.1 為促進我國與其他國家證券市場主管機關之國際合作，政府或其授權之機構依互惠原則，得與外國政府、機構或國際組織，就資訊交換、技術合作、協助調查等事項，簽訂合作條約或協定。除有妨害國家利益或投資大眾權益者外，主管機關依前項簽訂之條約或協定，得洽請相關機關、機構依法提供必要資訊，並基於互惠及保密原則，提供予與我國簽訂條約或協定之外國政府、機構或國際組織。
+* 21.1 為促進我國與其他國家證券市場主管機關之國際合作，政府或其授權之機構依互惠原則，得與外國政府、機構或國際組織，就資訊交換、技術合作、協助調查等事項，簽訂合作條約或協定。除有妨害國家利益或投資大眾權益者外，主管機關依前項簽訂之條約或協定，得洽請相關機關或要求有關之機構、法人、團體或自然人依該條約或協定提供必要資訊，並基於互惠及保密原則，提供予與我國簽訂條約或協定之外國政府、機構或國際組織。為促進證券市場國際合作，對於有違反外國金融管理法律之虞經外國政府調查、追訴或進行司法程序者，於外國政府依第一項簽訂之條約或協定請求協助調查時，主管機關得要求與證券交易有關之機構、法人、團體或自然人，提示相關之帳簿、文據或到達辦公處所說明；必要時，並得請該外國政府派員協助調查事宜。前項被要求到達辦公處所說明者，得選任律師、會計師、其他代理人或經主管機關許可偕同輔佐人到場。第二項及第三項規定之機構、法人、團體或自然人，對於主管機關要求提供必要資訊、提示相關帳簿、文據或到達辦公處所說明，不得規避、妨礙或拒絕。
 
-> 釋：一、本條新增。二、為促進我國與其他國家證券市場主管機關之國際合作，並參考組織犯罪防制條例第十五條規定之立法例，於第一項明定，政府或其授權之機構得與外國政府、機構或國際組織，就資訊交換、技術合作、協助調查等事項，簽訂合作條約或協定。三、簽訂合作條約或協定之主要目的在於與外國主管機關加強合作，共同遏止、打擊跨國不法行為，以維護本國證券市場之交易秩序與安全，故於第二項明定，除有妨害國家利益或投資大眾權益，主管機關依前項簽訂之合作條約或協定，得洽請相關機關或機構依法提供必要資訊，並基於互惠及保密原則，提供予與我國簽訂合作條約或協定之外國政府、機構或國際組織。
+> 釋：一、第一項未修正。二、為促進我國與其他國家金融主管機關及國際機構之國際合作，以符合國際證券管理機構組織多邊諮商、合作與資訊交換暸解備忘錄（IOSCO MMOU）A級簽署國要件，爰參考香港及英國立法例，於第二項增列主管機關得依第一項簽訂之條約或協定要求有關之機構、法人、團體及自然人依該條約或協定提供必要資訊予外國政府、機構或國際組織。三、另為促進證券市場國際合作，參考期貨交易法第九十九條及德國證券交易法，增訂第三項及第四項規定。四、為貫徹第二項及第三項規定之效力，相關機構、法人、團體或自然人經主管機關依該二項規定要求提供有關資料或到達辦公處所說明時，不得規避、妨礙或拒絕，爰增訂第五項。
 
 * 22 有價證券之募集及發行，除政府債券或經主管機關核定之其他有價證券外，非向主管機關申報生效後，不得為之。已依本法發行股票之公司，於依公司法之規定發行新股時，除依第四十三條之六第一項及第二項規定辦理者外，仍應依前項規定辦理。第一項規定，於出售所持有之公司股票、公司債券或其價款繳納憑證、表明其權利之證書或新股認購權利證書、新股權利證書，而公開招募者，準用之。依前三項規定申報生效應具備之條件、應檢附之書件、審核程序及其他應遵行事項之準則，由主管機關定之。前項準則有關外匯事項之規定，主管機關於訂定或修正時，應洽商中央銀行同意。
 
@@ -188,9 +188,9 @@
 
 * 35 公司發行股票或公司債券應經簽證，其簽證規則，由主管機關定之。
 
-* 36 已依本法發行有價證券之公司，應於每營業年度終了後四個月內公告並向主管機關申報，經會計師查核簽證、董事會通過及監察人承認之年度財務報告。其除經主管機關核准者外，並依左列規定辦理：一、於每半營業年度終了後二個月內，公告並申報經會計師查核簽證、董事會通過及監察人承認之財務報告。二、於每營業年度第一季及第三季終了後一個月內，公告並申報經會計師核閱之財務報告。三、於每月十日以前，公告並申報上月份營運情形。前項公司有左列情事之一者，應於事實發生之日起二日內公告並向主管機關申報：一、股東常會承認之年度財務報告與公告並向主管機關申報之年度財務報告不一致者。二、發生對股東權益或證券價格有重大影響之事項。第一項之公司，應編製年報，於股東常會分送股東；其應記載之事項，由主管機關定之。第一項及第二項公告、申報事項暨前項年報，有價證券已在證券交易所上市買賣者，應以抄本送證券交易所及證券商同業公會；有價證券已在證券商營業處所買賣者，應以抄本送證券商同業公會供公眾閱覽。第二項第一款及第三項之股東常會，應於每營業年度終了後六個月內召集之。公司在重整期間，第一項所定董事會及監察人之職權，由重整人及重整監督人行使。
+* 36 已依本法發行有價證券之公司，除經主管機關核准者外，應依下列規定公告並向主管機關申報：一、於每會計年度終了後三個月內，公告並申報經會計師查核簽證、董事會通過及監察人承認之年度財務報告。二、於每半會計年度終了後二個月內，公告並申報經會計師查核簽證、董事會通過及監察人承認之財務報告。三、於每會計年度第一季及第三季終了後一個月內，公告並申報經會計師核閱之財務報告。四、於每月十日以前，公告並申報上月份營運情形。前項公司有下列情事之一者，應於事實發生之日起二日內公告並向主管機關申報：一、股東常會承認之年度財務報告與公告並向主管機關申報之年度財務報告不一致。二、發生對股東權益或證券價格有重大影響之事項。第一項之公司，應編製年報，於股東常會分送股東；其應記載之事項，由主管機關定之。第一項及第二項公告、申報事項及前項年報，有價證券已在證券交易所上市買賣者，應以抄本送證券交易所；有價證券已在證券商營業處所買賣者，應以抄本送主管機關指定之機構供公眾閱覽。公司在重整期間，第一項所定董事會及監察人之職權，由重整人及重整監督人行使。股票已在證券交易所上市或於證券商營業處所買賣之公司股東常會，應於每會計年度終了後六個月內召開；不適用公司法第一百七十條第二項但書規定。股票已在證券交易所上市或於證券商營業處所買賣之公司董事及監察人任期屆滿之年，董事會未依前項規定召開股東常會改選董事、監察人者，主管機關得依職權限期召開；屆期仍不召開者，自限期屆滿時，全體董事及監察人當然解任。
 
-> 釋：一、發行公司之財務報告為投資人投資有價證券之主要參考依據，除必須符合可靠性、公開性外，尚須具時效性，使投資人了解公司之現狀與未來。本條現行第一項規定年度財務報告之申報及公告，須俟提經股東常會承認，而股東常會依公司法第一百七十二條第二項規定應於營業年度終了後六個月內召集，惟同項但書復規定有正當理由報經公司主管機關核准者，不在此限，致屢有於營業年度終了六個月後再行申報及公告，已失去其時效性，爰修正內容如次：（一）將年度財務報告申報期限，提前於營業年度終了後四個月內，並僅須經會計師查核簽證，提經董事會通過、監察人承認後，即可公告並向主管機關申報，免再俟提經股東會承認後申報。（二）將現以行政命令規定，公告並申報半營業年度財務報告期限改為半營業年度結束後二個月內，暨增加公告並申報第一季、第三季報與每月營業情形（包括營業額、背書保證資料等）予以納入。二、增訂第二項，對先公告並向主管機關申報之財務報告，與提經股東會承認不一致之再行申報，及發生偶發重大事項之公告及申報規定。三、第三項新增。鑒於發行公司除在募集與發行有價證券之年度，依本法第三十條始編製公開說明書，對公司財務業務狀況與展望有較詳盡報導外，在未辦理增資或發行公司債之年度，雖於召開股東常會，備有財務報告及議事手冊或議事錄，內容又失之簡略。為使投資人對公司之現況及未來有較詳盡之認識，及配合推動僑外資投資證券市場，編製中英對照，內容較詳盡之年報，對於發行公司本身亦屬有益，爰增訂第三項。四、現行第三項移列為第四項，並配合前三項之修正，明定有價證券已上市之公司，其有關財務報告，須分別以抄本送證券交易所及證券商同業公會，若僅在證券商營業處所買賣者，並無庸抄送證券交易所，僅須送交證券商同業公會，爰作文字修正。五、第六項新增。依公司法第二百九十三條第一項規定，發行有價證券之公司如經裁定重整，公司之董事、監察人之職權，應予停止。則第一項所規定申報年度、半年度財務報告即無法辦理，爰增訂第六項。
+> 釋：一、原第一項序文「應於每營業年度終了後四個月內公告並向主管機關申報，經會計師查核簽證、董事會通過及監察人承認之年度財務報告。」調整至第一項第一款，並為提昇資訊公開時效，將年度財務報告之公告及申報期限縮短為會計年度終了後三個月內；其餘款次依序調整，並酌作修正。另配合公司法用語，將第一項各款「營業年度」，修正為「會計年度」，本項序言及第一款並酌作文字及標點符號修正。二、依上述調整後，第一項第一款亦有除外條款之適用，即授權主管機關例外得延長年度財務報告公告及申報期限；例如：有關非上市（櫃）之公開發行公司之年度財務報告，仍維持於會計年度終了後四個月內公告及申報。三、考量年度財務報告、年報等公告及申報事項已於公開資訊觀測站公開，爰刪除第四項有關上市公司應將前揭事項抄送證券商同業公會之規定，原上櫃公司應將前揭事項抄送證券商同業公會之規定則修正為應抄送主管機關指定之機構。四、原條文第六項移至第五項。五、第二項序言及第一款酌作文字修正；第三項未修正。六、第六項明定上市或上櫃公司股東常會開會期限。七、增訂第七項，上市或上櫃公司董事及監察人任期屆滿之年，董事會未依前項規定召開股東常會改選董事、監察人者，主管機關得依職權限期召開；屆期仍不召開者，自限期屆滿時，全體董事及監察人當然解任。
 
 * 36.1 公開發行公司取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證及揭露財務預測資訊等重大財務業務行為，其適用範圍、作業程序、應公告、申報及其他應遵行事項之處理準則，由主管機關定之。
 
@@ -548,9 +548,9 @@
 
 > 釋：一、增訂第六項。二、規範公司發行具有股權性質之其他有價證券如可轉換公司債等準用本條，以周嚴有價證券之歸入權行使規範。
 
-* 157.1 下列各款之人，獲悉發行股票公司有重大影響其股票價格之消息時，在該消息未公開或公開後十二小時內，不得對該公司之上市或在證券商營業處所買賣之股票或其他具有股權性質之有價證券，買入或賣出：一、該公司之董事、監察人、經理人及依公司法第二十七條第一項規定受指定代表行使職務之自然人。二、持有該公司之股份超過百分之十之股東。三、基於職業或控制關係獲悉消息之人。四、喪失前三款身分後，未滿六個月者。五、從前四款所列之人獲悉消息之人。違反前項規定者，對於當日善意從事相反買賣之人買入或賣出該證券之價格，與消息公開後十個營業日收盤平均價格之差額，負損害賠償責任；其情節重大者，法院得依善意從事相反買賣之人之請求，將賠償額提高至三倍；其情節輕微者，法院得減輕賠償金額。第一項第五款之人，對於前項損害賠償，應與第一項第一款至第四款提供消息之人，負連帶賠償責任。但第一項第一款至第四款提供消息之人有正當理由相信消息已公開者，不負賠償責任。第一項所稱有重大影響其股票價格之消息，指涉及公司之財務、業務或該證券之市場供求、公開收購，對其股票價格有重大影響，或對正當投資人之投資決定有重要影響之消息；其範圍及公開方式等相關事項之辦法，由主管機關定之。第二十二條之二第三項規定，於第一項第一款、第二款，準用之；其於身分喪失後未滿六個月者，亦同。第二十條第四項規定，於第二項從事相反買賣之人準用之。
+* 157.1 下列各款之人，實際知悉發行股票公司有重大影響其股票價格之消息時，在該消息明確後，未公開前或公開後十八小時內，不得對該公司之上市或在證券商營業處所買賣之股票或其他具有股權性質之有價證券，自行或以他人名義買入或賣出：一、該公司之董事、監察人、經理人及依公司法第二十七條第一項規定受指定代表行使職務之自然人。二、持有該公司之股份超過百分之十之股東。三、基於職業或控制關係獲悉消息之人。四、喪失前三款身分後，未滿六個月者。五、從前四款所列之人獲悉消息之人。前項各款所定之人，實際知悉發行股票公司有重大影響其支付本息能力之消息時，在該消息明確後，未公開前或公開後十八小時內，不得對該公司之上市或在證券商營業處所買賣之非股權性質之公司債，自行或以他人名義賣出。違反第一項或前項規定者，對於當日善意從事相反買賣之人買入或賣出該證券之價格，與消息公開後十個營業日收盤平均價格之差額，負損害賠償責任；其情節重大者，法院得依善意從事相反買賣之人之請求，將賠償額提高至三倍；其情節輕微者，法院得減輕賠償金額。第一項第五款之人，對於前項損害賠償，應與第一項第一款至第四款提供消息之人，負連帶賠償責任。但第一項第一款至第四款提供消息之人有正當理由相信消息已公開者，不負賠償責任。第一項所稱有重大影響其股票價格之消息，指涉及公司之財務、業務或該證券之市場供求、公開收購，其具體內容對其股票價格有重大影響，或對正當投資人之投資決定有重要影響之消息；其範圍及公開方式等相關事項之辦法，由主管機關定之。第二項所定有重大影響其支付本息能力之消息，其範圍及公開方式等相關事項之辦法，由主管機關定之。第二十二條之二第三項規定，於第一項第一款、第二款，準用之；其於身分喪失後未滿六個月者，亦同。第二十條第四項規定，於第三項從事相反買賣之人準用之。
 
-> 釋：為加強防制內線交易不法，對內線交易其「內部人範圍」、「公開之方式」、「公開期限」、「重大消息」等要件之定義，及對民事賠償之計算方式予以更明確規範，爰加以修正之。
+> 釋：照黨團協商條文通過。
 
 * 158 證券經紀商接受於有價證券集中交易市場為買賣之受託契約，應依證券交易所所訂受託契約準則訂定之。前項受託契約準則之主要內容，由主管機關以命令定之。
 
@@ -580,9 +580,9 @@
 
 * 170 證券商同業公會及證券交易所應於章程或規則內，訂明有關仲裁之事項。但不得牴觸本法及商務仲裁條例。
 
-* 171 有下列情事之一者，處三年以上十年以下有期徒刑，得併科新臺幣一千萬元以上二億元以下罰金：一、違反第二十條第一項、第二項、第一百五十五條第一項、第二項或第一百五十七條之一第一項之規定者。二、已依本法發行有價證券公司之董事、監察人、經理人或受僱人，以直接或間接方式，使公司為不利益之交易，且不合營業常規，致公司遭受重大損害者。三、已依本法發行有價證券公司之董事、監察人或經理人，意圖為自己或第三人之利益，而為違背其職務之行為或侵占公司資產。犯前項之罪，其犯罪所得金額達新臺幣一億元以上者，處七年以上有期徒刑，得併科新臺幣二千五百萬元以上五億元以下罰金。犯第一項或第二項之罪，於犯罪後自首，如有犯罪所得並自動繳交全部所得財物者，減輕或免除其刑；並因而查獲其他正犯或共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白，如有犯罪所得並自動繳交全部所得財物者，減輕其刑；並因而查獲其他正犯或共犯者，減輕其刑至二分之一。犯第一項或第二項之罪，其犯罪所得利益超過罰金最高額時，得於所得利益之範圍內加重罰金；如損及證券市場穩定者，加重其刑至二分之一。犯第一項或第二項之罪者，其因犯罪所得財物或財產上利益，除應發還被害人、第三人或應負損害賠償金額者外，以屬於犯人者為限，沒收之。如全部或一部不能沒收時，追徵其價額或以其財產抵償之。
+* 171 有下列情事之一者，處三年以上十年以下有期徒刑，得併科新臺幣一千萬元以上二億元以下罰金：一、違反第二十條第一項、第二項、第一百五十五條第一項、第二項、第一百五十七條之一第一項或第二項規定。二、已依本法發行有價證券公司之董事、監察人、經理人或受雇人，以直接或間接方式，使公司為不利益之交易，且不合營業常規，致公司遭受重大損害。三、已依本法發行有價證券公司之董事、監察人或經理人，意圖為自己或第三人之利益，而為違背其職務之行為或侵占公司資產。犯前項之罪，其犯罪所得金額達新臺幣一億元以上者，處七年以上有期徒刑，得併科新臺幣二千五百萬元以上五億元以下罰金。犯第一項或第二項之罪，於犯罪後自首，如有犯罪所得並自動繳交全部所得財物者，減輕或免除其刑；並因而查獲其他正犯或共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白，如有犯罪所得並自動繳交全部所得財物者，減輕其刑；並因而查獲其他正犯或共犯者，減輕其刑至二分之一。犯第一項或第二項之罪，其犯罪所得利益超過罰金最高額時，得於所得利益之範圍內加重罰金；如損及證券市場穩定者，加重其刑至二分之一。犯第一項或第二項之罪者，其因犯罪所得財物或財產上利益，除應發還被害人、第三人或應負損害賠償金額者外，以屬於犯人者為限，沒收之。如全部或一部不能沒收時，追徵其價額或以其財產抵償之。
 
-> 釋：一、刑法第四章章名已由「共犯」修正為「正犯與共犯」，爰修正第三項及第四項。二、第一項、第二項、第五項及第六項未修正。
+> 釋：一、配合第一百五十七條之一第二項之增訂，修正第一項第一款規定增列違反上開規定之處罰。另同項第一款及第二款酌作文字修正。二、其餘各項未修正。
 
 * 172 證券交易所之董事、監察人或受僱人，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
@@ -612,17 +612,17 @@
 
 > 釋：一、第七十四條及第八十四條均屬行政上消極防弊規定，無處刑罰之必要，宜改為行政罰。二、為符合刑罰條文在前，行政罰條文在後之體例，本條移列為第一百七十七條之一，本條刪除。
 
-* 177 有左列情事之一者，處一年以下有期徒刑、拘役或科或併科新臺幣一百二十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十三條之四第一項、第四十三條之八第一項、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百二十八條、第一百五十條或第一百六十五條之規定者。二、違反主管機關依第六十一條所為之規定者。
+* 177 有下列情事之一者，處一年以下有期徒刑、拘役或科或併科新臺幣一百二十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十三條之四第一項、第四十三條之八第一項、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百五十條或第一百六十五條規定。二、違反主管機關依第六十一條所為之規定。
 
-> 釋：一、第四十三條之四第三項已有準用第三十一條規定之明文，爰於第一款增列未交付公開收購說明書之相關刑責。二、對於違反私募有價證券再行賣出規定者，於第一款增列相關刑責。
+> 釋：一、修正本條第一款，刪除第一百二十八條刑罰之規定。二、第一百二十八條修正將證券交易所其股份轉讓限於證券商之規定予以刪除，僅其單一股東及全體外國人持有證券交易所之股份比率、總額等予以規定，故參考期貨交易法對違反同法第三十四條規定而持有期貨交易所股份超過法定比率者，並無刑責之規定，爰刪除違反第一百二十八條之刑罰規定。三、配合法制用語，酌作文字修正。
 
 * 177.1 違反第七十四條或第八十四條之規定者，處相當於所取得有價證券價金額以下之罰鍰。但不得少於新臺幣十二萬元。
 
 > 釋：罰鍰處分修正為以新臺幣為單位；並為確實達行政罰鍰效果，斟酌將罰鍰額度提高。
 
-* 178 有下列情事之一者，處新臺幣二十四萬元以上二百四十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十六條之一、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條或第一百五十二條規定。二、違反第十四條第三項、第十四條之一第一項、第三項、第十四條之二第一項、第五項、第十四條之三、第十四條之四第一項、第二項、第十四條之五第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之三第一項、第七項、第三十六條第四項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十九條或第一百五十九條規定。三、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條第一項所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕、妨礙或規避。四、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條第一項所定之事業，於依本法或主管機關基於本法所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存。五、違反主管機關依第二十五條之一所定規則有關徵求人、受託代理人與代為處理徵求事務者之資格條件、委託書徵求與取得之方式及對於主管機關要求提供之資料拒絕提供之規定。六、違反主管機關依第二十六條第二項所定公開發行公司董事、監察人股權成數及查核實施規則有關股權成數、通知及查核之規定。七、違反第二十六條之三第八項規定未訂定議事規範或違反主管機關依同條項所定辦法有關主要議事內容、作業程序、議事錄應載明事項及公告之規定，或違反主管機關依第三十六條之一所定準則有關取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證及揭露財務預測資訊等重大財務業務行為之適用範圍、作業程序、應公告及申報之規定。八、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所定辦法有關買回股份之程序、價格、數量、方式、轉讓方法及應申報公告事項之規定。九、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所定辦法有關收購有價證券之範圍、條件、期間、關係人及申報公告事項之規定。有前項第二款至第七款規定情事之一，主管機關除依前項規定處罰鍰外，並應令其限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次各處新臺幣四十八萬元以上四百八十萬元以下罰鍰，至辦理為止。檢舉違反第二十五條之一案件因而查獲者，應予獎勵，其辦法由主管機關定之。
+* 178 有下列情事之一者，處新臺幣二十四萬元以上二百四十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十六條之一、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條或第一百五十二條規定。二、違反第十四條第三項、第十四條之一第一項、第三項、第十四條之二第一項、第五項、第十四條之三、第十四條之四第一項、第二項、第十四條之五第一項、第二項、第二十一條之一第五項、第二十五條第一項、第二項、第四項、第二十六條之三第一項、第七項、第三十六條第四項、第六項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十九條或第一百五十九條規定。三、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條第一項所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕、妨礙或規避。四、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條第一項所定之事業，於依本法或主管機關基於本法所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存。五、違反主管機關依第二十五條之一所定規則有關徵求人、受託代理人與代為處理徵求事務者之資格條件、委託書徵求與取得之方式、召開股東會公司應遵守之事項及對於主管機關要求提供之資料拒絕提供之規定。六、違反主管機關依第二十六條第二項所定公開發行公司董事、監察人股權成數及查核實施規則有關通知及查核之規定。七、違反第二十六條之三第八項規定未訂定議事規範或違反主管機關依同條項所定辦法有關主要議事內容、作業程序、議事錄應載明事項及公告之規定，或違反主管機關依第三十六條之一所定準則有關取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證及揭露財務預測資訊等重大財務業務行為之適用範圍、作業程序、應公告及申報之規定。八、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所定辦法有關買回股份之程序、價格、數量、方式、轉讓方法及應申報公告事項之規定。九、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所定辦法有關收購有價證券之範圍、條件、期間、關係人及申報公告事項之規定。有前項第二款至第七款規定情事之一，主管機關除依前項規定處罰鍰外，並應令其限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次各處新臺幣四十八萬元以上四百八十萬元以下罰鍰，至辦理為止。檢舉違反第二十五條之一案件因而查獲者，應予獎勵；其辦法由主管機關定之。
 
-> 釋：一、配合第十四條、第二十五條之一修正，及第十四條之二至第十四條之五、第二十六條之三等規定之增訂，爰修正第一項。二、原條文第二項配合第一項之款次變更，酌作文字修正。三、增訂第三項。檢舉違反第二十五條之一案件因而查獲者，應予獎勵，其辦法由主管機關定之。
+> 釋：一、配合第二十一條之一之修正，對於違反該條第五項規定者，亦有處以罰鍰之必要，爰修正第一項第二款增列其處罰，另同項同款第三十六條第四項後增列「、第六項」。二、第一項第五款修正為：「五、違反主管機關依第二十五條之一所定規則有關徵求人、受託代理人與代為處理徵求事務者之資格條件、委託書徵求與取得之方式、召開股東會公司應遵守之事項及對於主管機關要求提供之資料拒絕提供之規定。」及第六款末句刪除「股權成數、」。三、第二項未修正；第三項標點符號酌作修正。
 
 * 179 法人違反本法之規定者，依本章各條之規定處罰其為行為之負責人。
 
@@ -652,7 +652,7 @@
 
 > 釋：配合行政院金融監督管理委員會於九十三年七月一日成立，業依行政院金融監督管理委員會組織法第二條、第四條及行政程序法第十一條第二項將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，爰修正本條文。
 
-* 183 本法施行日期，除中華民國八十九年七月十九日修正公布之第五十四條、第九十五條及第一百二十八條自九十年一月十五日施行，九十四年十二月二十日修正之第十四條之二至第十四條之五、第二十六條之三自九十六年一月一日施行，九十五年五月五日修正之條文自九十五年七月一日施行，及九十八年五月二十六日修正之條文自九十八年十一月二十三日施行外，自公布日施行。
+* 183 本法施行日期，除中華民國八十九年七月十九日修正公布之第五十四條、第九十五條及第一百二十八條自九十年一月十五日施行，九十四年十二月二十日修正之第十四條之二至第十四條之五、第二十六條之三自九十六年一月一日施行，九十五年五月五日修正之條文自九十五年七月一日施行，九十八年五月二十六日修正之條文自九十八年十一月二十三日施行，及九十九年五月四日修正之第三十六條自一百零一年一月一日施行外，自公布日施行。
 
-> 釋：配合九十七年五月二十三日修正公布之民法及其施行法修正條文自九十八年十一月二十三日施行，將本法本次修正條文之施行日期定自同日施行，另酌作文字修正。
+> 釋：照黨團協商條文通過。
 
