--- a/行政-內政/自來水法.md
+++ b/行政-內政/自來水法.md
@@ -38,9 +38,9 @@
 
 > 釋：照黨團協商條文通過。
 
-* 12.2 於水質水量保護區內取用地面水或地下水者，除該區內非營利之家用及公共給水外，應向中央主管機關繳交水源保育與回饋費。其為工業用水或公共給水之公用事業，得報經中央主管機關同意後，於其公用事業費用外附徵百分之五以上百分之十五以下之費額。供農業使用者，中央主管機關及中央農業主管機關應編列預算補助。補助對象及方式之辦法，由中央主管機關會同中央農業主管機關定之。前項水源保育與回饋費之徵收項目、對象、計算方式、費率、徵收方式、繳費流程、繳納期限、繳費金額不足之追補繳、取用水資源量之計算方法及其他應遵行事項之收費辦法，由中央主管機關會商有關機關依水源或用水標的分別定之。第一項水源保育與回饋費得納入中央主管機關水資源相關基金管理運用，專供水質水量保護區內辦理水資源保育與環境生態保育基礎設施、居民公共福利回饋及受限土地補償之用，其支用項目如下：一、辦理水資源保育、排水、生態遊憩觀光設施及其他水利設施維護管理事項。二、辦理居民就業輔導、具公益性之水資源涵養與保育之地方產業輔導、教育獎助學金、醫療健保及電費、非營利之家用自來水水費補貼等公共福利回饋事項。三、發放因水質水量保護區之劃設，土地受限制使用之土地所有權人或相關權利人補償金事項。四、原住民族地區租稅補助事項。五、供緊急使用之準備金。六、徵收水源保育與回饋費之相關費用事項。七、使用水源保育與回饋費之必要執行事項。八、其他有關居民公益及水資源教育、研究與保育事項。前項第三款之補償應視土地使用現況、使用面積及受限制程度，發給補償金，並由主管機關與土地所有權人或相關權利人締結行政契約。補償對象以私有土地所有權人或相關權利人為優先，其發放標準及契約範本，由中央主管機關會同行政院原住民族委員會及相關部會定之。其行政契約應明訂所有權人或相關權利人土地容許使用項目、違約處罰方式等。支用於第三項第一款至第五款、第七款及第八款之經費，由水質水量保護區專戶運用小組依其區內土地面積及居民人口比例，分配運用於區內各鄉（鎮、市、區）。但原住民族鄉應從優考量。
+* 12.2 於水質水量保護區內取用地面水或地下水者，除該區內非營利之家用及公共給水外，應向中央主管機關繳交水源保育與回饋費。其為工業用水或公共給水之公用事業，得報經中央主管機關同意後，於其公用事業費用外附徵百分之五以上百分之十五以下之費額。供農業使用者，中央主管機關及中央農業主管機關應編列預算補助。補助對象及方式之辦法，由中央主管機關會同中央農業主管機關定之。前項水源保育與回饋費之徵收項目、對象、計算方式、費率、徵收方式、繳費流程、繳納期限、繳費金額不足之追補繳、取用水資源量之計算方法及其他應遵行事項之收費辦法，由中央主管機關會商有關機關依水源或用水標的分別定之。第一項水源保育與回饋費得納入中央主管機關水資源相關基金管理運用，專供水質水量保護區內辦理水資源保育與環境生態保育基礎設施、居民公共福利回饋及受限土地補償之用，其支用項目如下：一、辦理水資源保育、排水、生態遊憩觀光設施及其他水利設施維護管理事項。二、辦理居民就業輔導、具公益性之水資源涵養與保育之地方產業輔導、教育獎助學金、醫療健保及電費、非營利之家用自來水水費補貼等公共福利回饋事項。三、發放因水質水量保護區之劃設，土地受限制使用之土地所有權人或相關權利人補償金事項。四、原住民族地區租稅補助事項。五、供緊急使用之準備金。六、徵收水源保育與回饋費之相關費用事項。七、使用水源保育與回饋費之必要執行事項。八、其他有關居民公益及水資源教育、研究與保育事項。前項第三款之補償應視土地使用現況、使用面積及受限制程度，發給補償金，並由主管機關與土地所有權人或相關權利人締結行政契約。補償對象以私有土地所有權人或相關權利人為優先，其發放標準及契約範本，由中央主管機關會同行政院原住民族委員會及相關部會定之。其行政契約應明訂所有權人或相關權利人土地容許使用項目、違約處罰方式等。支用於第三項第一款至第五款、第七款及第八款之經費，由水質水量保護區專戶運用小組依其區內土地面積及居民人口比例，分配運用於區內各鄉（鎮、市、區）。但原住民族鄉應從優考量。水質水量保護區內非營利之家用自來水水費減半收取，其減收費額由水源保育與回饋費支應。保護區內原住民地區非屬自來水供水系統之簡易供水設施，應加速辦理。同一鄉（鎮、市、區）公所跨二以上保護區者，其水源保育與回饋費，得經各該保護區之運用小組協調及審議通過後運用之。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、本條第三項規定：「水源保育與回饋費得納入中央主管機關水資源相關基金管理運用，專供水質水量保護區內辦理水資源保育與環境生態保育基礎設施、居民公共福利回饋及受限土地補償之用。」二、有關居民公共福利回饋及受限土地補償方式，以自來水水費補貼，最符合公平受益原則，並能具體實現回饋居民之宗旨。三、為解決原住民部落供水問題，行政院原住民委員會已依據年度預算程序，編列預算辦理「原住民族部落水資源規劃及供水計畫」，因此保護區內原住民地區供水系統，應依據該項計畫加速辦理之。四、增訂第六項，明訂：「水質水量保護區內非營利之家用自來水水費減半收取。保護區內原住民地區非屬自來水供水系統之簡易供水設施，應加速辦理」。五、為免同一鄉（鎮、市、區）公所跨二以上保護區者，其水源保育與回饋費有所差異，爰增列第七項，得經各該保護區之運用小組協調及審議通過後運用之。
 
 * 12.3 水資源相關基金應依各水質水量保護區分別設置專戶，各專戶並設置運用小組管理運用。專戶運用小組成員由相關中央主管機關、水質水量保護區與其用水地區地方主管機關、民意機關代表、居民代表及社會公正人士組成；其設置要點由水資源相關基金管理委員會定之。涉及原住民族地區之水質水量保護區，其專戶運用小組居民代表成員，應依比例由原住民居民代表擔任；其水源保育與回饋費，應依比例運用於原住民族地區。本法中華民國九十三年六月三十日修正公布施行前，附徵之水源特定區協助地方建設費用，於水源保育與回饋費徵收前，繼續於水價外附徵；其協助臺北水源特定區地方建設辦法，繼續適用。水源保育與回饋費徵收後，原依本法附徵之水源特定區協助地方建設費用，納入水源特定區專戶管理運用。
 
