刑事訴訟法 2010.6.1

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -74,9 +74,13 @@
 
 > 釋：一、第一項未修正。二、在改良式當事人進行主義之訴訟架構下，證據之提出與交互詰問之進行，均由當事人主導，而依現行本法規定，被告有辯護人者，得經由其辯護人閱卷，以利防禦權之行使，被告無辯護人者，既同有行使防禦權之必要，自應適當賦予無辯護人之被告閱錄卷證之權利。惟因被告本身與審判結果有切身利害關係，如逕將全部卷證交由被告任意翻閱，將有必須特別加強卷證保護作為之勞費，其被告在押者，且將增加提解在押被告到法院閱卷所生戒護人力之沈重負擔，為保障無辯護人之被告防禦權，並兼顧司法資源之有效運用，爰增訂第二項前段，明定無辯護人之被告得預納費用請求付與卷內筆錄之影本。至筆錄以外之文書等證物，仍應經由法官於審判中依法定調查證據方法，使無辯護人之被告得知其內容，俾能充分行使其防禦權，併予敘明。三、又筆錄之內容如與被告被訴事實無關或足以妨害另案之偵查、或當事人或第三人之隱私或業務秘密者，為免徒增不必要之閱卷勞費、妨害另案之偵查、或他人之隱私資料或業務秘密，允宜由法院得就前開閱卷範圍及方式為合理之限制，爰增訂第二項但書。
 
-* 34 辯護人得接見犯罪嫌疑人及羈押之被告，並互通書信。但有事實足認其有湮滅、偽造、變造證據或勾串共犯或證人之虞者，得限制之。
+* 34 辯護人得接見羈押之被告，並互通書信。非有事證足認其有湮滅、偽造、變造證據或勾串共犯或證人者，不得限制之。辯護人與偵查中受拘提或逮捕之被告或犯罪嫌疑人接見或互通書信，不得限制之。但接見時間不得逾一小時，且以一次為限。接見經過之時間，同為第九十三條之一第一項所定不予計入二十四小時計算之事由。前項接見，檢察官遇有急迫情形且具正當理由時，得暫緩之，並指定即時得為接見之時間及場所。該指定不得妨害被告或犯罪嫌疑人之正當防禦及辯護人依第二百四十五條第二項前段規定之權利。
 
-> 釋：本條原僅規定審判中之辯護人得接見羈押之被告，第二十七條修正後，偵查中所選任之辯護人自亦得接見羈押之被告或犯罪嫌疑人，並互通書信，爰修正本條，增列「犯罪嫌疑人及」六字，俾使於偵查及審判程序中均能適用。
+> 釋：一、原條文關於羈押之被告之規定，列為第一項。二、增訂第二、三項，明確並具體訂定接見之時間、次數及接見經過時間之計算。另說明被告或犯罪嫌疑人正當防禦及辯護人之權利，係依第二百四十五條第二項前段之規定。修正之文字如下：「辯護人與偵查中受拘提或逮捕之被告或犯罪嫌疑人接見或互通書信，不得限制之。但接見時間不得逾一小時，且以一次為限。接見經過之時間，同為第九十三條之一第一項所定不予計入二十四小時計算之事由。前項接見，檢察官遇有急迫情形且具正當理由時，得暫緩之，並指定即時得為接見之時間及場所。該指定不得妨害被告或犯罪嫌疑人之正當防禦及辯護人依第二百四十五條第二項前段規定之權利。」。三、辯護人與羈押之被告，能在不受干預下充分自由溝通，為辯護人協助被告行使防禦權之重要內涵，應受憲法之保障。參照司法院釋字第六五四號解釋意旨，此自由溝通權利雖非不得以法律加以限制，惟應合乎憲法第二十三條比例原則規定，並應具體明確，方符憲法保障防禦權之本旨。爰就第一項為文字修正，揭明辯護人與羈押之被告得為接見或互通書信，暨得予限制之條件。至犯罪嫌疑人部分，於增訂之第二項、第三項中規範。四、偵查中之被告或犯罪嫌疑人經拘提或逮捕到場者，為保障其訴訟上之防禦權，對其與辯護人之接見或互通書信，不得限制之。惟偵查具有時效性，未免接見時間過長，或多次接見，致妨礙偵查之進行，接見時間及次數宜有限制。又辯護人接見受拘提、逮捕到場之被告或犯罪嫌疑人之時間，並非檢察官或司法警察官使用之偵查期間，與第九十三條之一第一項各款情形相當，自不應列入第九十一條及九十三條第二項所定之二十四小時，爰增訂第二項，以資兼顧。五、辯護人與偵查中受拘提或逮捕之被告或犯罪嫌疑人接見或互通書信，依第二項規定，固不得限制。惟有急迫情形，且有正當理由，例如，辯護人之接見將導致偵查行為中斷之顯然妨害偵查進行之情形時，宜例外允許檢察官為必要之處置。爰於第三項前段明定檢察官遇有急迫情形且具正當理由時，得暫緩辯護人之接見，並指定即時得為接見之時間及場所，以兼顧偵查之必要及被告之辯護依賴權。又檢察官所為之指定，應合理、妥適，不得妨害被告或犯罪嫌疑人正當防禦之權利，及辯護人依第二百四十五條第二項前段規定之在場權，爰第三項後段明定之。至司法警察（官），因調查犯罪及蒐集證據，如認有上開暫緩及指定之必要時，應報請檢察官為之。六、如辯護人、被告或犯罪嫌疑人不服檢察官依第三項所為指定之處分，依第四百十六條第一項第四款規定提起救濟，經法院以其指定不符合「有急迫情形且具正當理由」之要件，或妨害被告或犯罪嫌疑人正當防禦或辯護人依第二百四十五條第二項前段規定之權利，予以撤銷或變更者，既屬指定不當，即屬違背法定程序之一種，期間所取得之證據，其證據能力之有無，應依第一百五十八條之四規定，審酌人權保障及公共利益之均衡維護定之，附此敘明。七、本條僅以辯護人對人身自由受拘束之被告或犯罪嫌疑人之接見或互通書信為規範內涵，至於人身自由未受拘束之被告或犯罪嫌疑人，辯護人本得與之自由接見或互通書信，而無本條之適用，自屬當然。
+
+* 34.1 限制辯護人與羈押之被告接見或互通書信，應用限制書。限制書，應記載下列事項：一、被告之姓名、性別、年齡、住所或居所，及辯護人之姓名。二、案由。三、限制之具體理由及其所依據之事實。四、具體之限制方法。五、如不服限制處分之救濟方法。第七十一條第三項規定，於限制書準用之。限制書，由法官簽名後，分別送交檢察官、看守所、辯護人及被告。偵查中檢察官認羈押中被告有限制之必要者，應以書面記載第二項第一款至第四款之事項，並檢附相關文件，聲請該管法院限制。但遇有急迫情形時，得先為必要之處分，並應於二十四小時內聲請該管法院補發限制書；法院應於受理後四十八小時內核復。檢察官未於二十四小時內聲請，或其聲請經駁回者，應即停止限制。前項聲請，經法院駁回者，不得聲明不服。
+
+> 釋：一、本條新增。二、限制辯護人與羈押之被告接見或互通書信，應經法院許可，為求適用上之明確，爰增訂本條第一項至第四項。至辯護人與偵查中受拘提或逮捕之被告或犯罪嫌疑人接見或互通書信，依第三十四條第二項規定，不得限制，自無本條之適用。三、第二項第一款之辯護人之姓名，係指接見或互通書信權利受限制之辯護人，不及於未受限制之辯護人。四、第二項第四款之限制方法，即係司法院釋字第六五四號解釋理由書所謂之限制方式及期間。至應採何種限制方法，本法未予明定，偵查中案件，應由檢察官於聲請時，敘明具體之限制方法及理由，由法院就個案予以審酌，並為具體明確之決定。另為維持押所秩序之必要，於受羈押被告與其辯護人接見時，如僅予以監看而不與聞，參酌同號解釋意旨，尚未侵害憲法保障之訴訟權，非屬本款之限制方法，毋庸經法院許可限制。五、案件於偵查中，檢察官如認有限制辯護人與羈押之被告接見或互通書信之必要者，應以書面記載第二項第一款至第四款之事項，並檢附相關文件，聲請管轄法院許可之，爰增訂第五項前段。六、偵查中遇有急迫情形時，為免緩不濟急，應容許檢察官先為必要之處分。惟為落實法院之審核機制，檢察官應以書面記載第二項第一款至第四款之事項，並檢附相關文件，於二十四小時內聲請該管法院補發限制書。並參考通訊保障及監察法第六條第二項，明定法院應於受理後四十八小時內核復，以維人權。如檢察官未於二十四小時內聲請補發限制書，或法院審核後，認不符要件，而予以駁回者，自應即時停止限制，以維程序正義，爰增訂第五項但書。七、法院於審理中依職權核發限制書，或受理檢察官之聲請，於必要時，得先聽取當事人或辯護人之意見。八、為確保羈押之被告之防禦權，限制辯護人與之接見或互通書信，應屬例外，故不論檢察官係依第五項前段聲請限制，或依同項但書聲請補發限制書，一經法院駁回，均以不得聲明不服為宜。若檢察官認有應予限制之新事證，自得據以重新聲請，不生一事不再理之問題，乃屬當然。爰增訂第六項。九、法院核發或補發限制書之程序，除偵查中特重急迫性及隱密性，應立即處理且審查內容不得公開外，其目的僅在判斷有無限制辯護人與羈押之被告接見或互通書信之必要，尚非認定被告有無犯罪之實體審判程序，參照第一百五十九條第二項規定，無須嚴格證明，僅以自由證明為已足。
 
 * 35 被告或自訴人之配偶、直系或三親等內旁系血親或家長、家屬或被告之法定代理人於起訴後，得向法院以書狀或於審判期日以言詞陳明為被告或自訴人之輔佐人。輔佐人得為本法所定之訴訟行為，並得在法院陳述意見。但不得與被告或自訴人明示之意思相反。被告或犯罪嫌疑人因智能障礙無法為完全之陳述者，應有第一項得為輔佐人之人或其委任之人或主管機關指派之社工人員為輔佐人陪同在場。但經合法通知無正當理由不到場者，不在此限。
 
@@ -1460,9 +1464,9 @@
 
 * 403 當事人對於法院之裁定有不服者，除有特別規定外，得抗告於直接上級法院。證人、鑑定人、通譯及其他非當事人受裁定者，亦得抗告。
 
-* 404 對於判決前關於管轄或訴訟程序之裁定，不得抗告。但下列裁定，不在此限：一、有得抗告之明文規定者。二、關於羈押、具保、責付、限制住居、搜索、扣押或扣押物發還、因鑑定將被告送入醫院或其他處所之裁定及依第一百零五條第三項、第四項所為之禁止或扣押之裁定。
+* 404 對於判決前關於管轄或訴訟程序之裁定，不得抗告。但下列裁定，不在此限：一、有得抗告之明文規定者。二、關於羈押、具保、責付、限制住居、搜索、扣押或扣押物發還、因鑑定將被告送入醫院或其他處所之裁定及依第一百零五條第三項、第四項所為之禁止或扣押之裁定。三、對於限制辯護人與被告接見或互通書信之裁定。
 
-> 釋：配合刑事訴訟法第四百十六條第一項第一款之修正，將法院所為之搜索、限制住居（限制出境）、對在押被告之禁止接見通信等裁定，亦納入本條得提起抗告之範圍，予受處分或受裁定人法律上救濟之機會。
+> 釋：一、第一款、第二款未修正。二、憲法第十六條保障人民訴訟權，係指人民於其權利遭受侵害時，有請求法院救濟之權利。基於有權利即有救濟之原則，人民認為其權利遭受侵害時，必須給予向法院請求救濟之機會，此乃訴訟權保障之核心內容，不得因身分之不同而予以剝奪（司法院釋字第六五三號解釋參照），辯護人即屬第四百零三條第二項之「非當事人受裁定者」，故對於接見或互通書信權利受限制之辯護人或被告，自應給予救濟機會，爰增訂第三款。
 
 * 405 不得上訴於第三審法院之案件，其第二審法院所為裁定，不得抗告。
 
@@ -1486,9 +1490,9 @@
 
 * 415 對於抗告法院之裁定，不得再行抗告。但對於其就左列抗告所為之裁定，得提起再抗告：一、對於駁回上訴之裁定抗告者。二、對於因上訴逾期聲請回復原狀之裁定抗告者。三、對於聲請再審之裁定抗告者。四、對於第四百七十七條定刑之裁定抗告者。五、對於第四百八十六條聲明疑義或異議之裁定抗告者。六、證人、鑑定人、通譯及其他非當事人對於所受之裁定抗告者。前項但書之規定，於依第四百零五條不得抗告之裁定，不適用之。
 
-* 416 對於審判長、受命法官、受託法官或檢察官所為下列處分有不服者，受處分人得聲請所屬法院撤銷或變更之：一、關於羈押、具保、責付、限制住居、搜索、扣押或扣押物發還、因鑑定將被告送入醫院或其他處所之處分及第一百零五條第三項、第四項所為之禁止或扣押之處分。二、關於證人、鑑定人或通譯科罰鍰之處分。前項之搜索、扣押經撤銷者，審判時法院得宣告所扣得之物，不得作為證據。第一項聲請期間為五日，自為處分之日起算，其為送達者，自送達後起算。第四百零九條至第四百十四條之規定，於本條準用之。第二十一條第一項之規定，於聲請撤銷或變更受託法官之裁定者準用之。
+* 416 對於審判長、受命法官、受託法官或檢察官所為下列處分有不服者，受處分人得聲請所屬法院撤銷或變更之：一、關於羈押、具保、責付、限制住居、搜索、扣押或扣押物發還、因鑑定將被告送入醫院或其他處所之處分及第一百零五條第三項、第四項所為之禁止或扣押之處分。二、對於證人、鑑定人或通譯科罰鍰之處分。三、對於限制辯護人與被告接見或互通書信之處分。四、對於第三十四條第三項指定之處分。前項之搜索、扣押經撤銷者，審判時法院得宣告所扣得之物，不得作為證據。第一項聲請期間為五日，自為處分之日起算，其為送達者，自送達後起算。第四百零九條至第四百十四條規定，於本條準用之。第二十一條第一項規定，於聲請撤銷或變更受託法官之裁定者準用之。
 
-> 釋：一、於原條文第一項明訂得對審判長、受命法官、受託法官或檢察官之處分聲明不服者為處分之相對人。另為落實人權保障，於本項第一款增訂限制住居及搜索均得為聲明不服之對象。二、於原條文第二項增訂搜索扣押經撤銷者，審判中審理本案之法院，得依情形宣告所扣得之物，不得作為證據。
+> 釋：一、第一項第一款、第二款、第二項至第五項未修正。二、憲法第十六條保障人民訴訟權，係指人民於其權利遭受侵害時，有請求法院救濟之權利。基於有權利即有救濟之原則，人民認為其權利遭受侵害時，必須給予向法院請求救濟之機會，此乃訴訟權保障之核心內容，不得因身分之不同而予以剝奪（司法院釋字第六五三號解釋參照）。故對於接見或互通書信權利受限制之辯護人或被告，自應給予救濟機會。上開限制如係以法院裁定為之者，得依第四百零四條第三款提起抗告救濟之；如係由審判長或受命法官所為者，自得聲請所屬法院撤銷或變更之，爰增訂第一項第三款。三、辯護人、被告或犯罪嫌疑人對於檢察官依第三十四條第三項規定指定接見之時間、場所之處分，如有不服，亦應給予救濟之機會，爰增訂第一項第四款。
 
 * 417 前條聲請應以書狀敘述不服之理由，提出於該管法院為之。
 
