證券交易法 2010.11.5

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -58,6 +58,10 @@
 
 > 釋：一、本條新增。二、增訂審計委員會之職權範圍及行使方式。
 
+* 14.6 股票已在證券交易所上市或於證券商營業處所買賣之公司應設置薪資報酬委員會；其成員專業資格、所定職權之行使及相關事項之辦法，由主管機關定之。前項薪資報酬應包括董事、監察人及經理人之薪資、股票選擇權與其他具有實質獎勵之措施。
+
+> 釋：一、本條新增。二、我國證券交易所為強化上市公司董監酬金資訊揭露，雖已於公開資訊觀測站「公司治理專區」項下，公布公司連續2年度稅後虧損，但董事、監察人酬金總額或平均每位董事、監察人酬金卻增加的上市公司代號、公司名稱、最近2年度稅後虧損金額、董事、監察人酬金總額及平均每位董事、監察人酬金。不過，相關公布仍無法阻止當公司連續虧損時，董事、監察人酬金總額仍大幅度地增加之弊端。因此，實應強制董事會設置薪資報酬委員會，方得更有效地消除此類弊端。三、目前我國證券交易法已明確規範公開發行股票之公司應設置審計委員會。為保障投資人權益，亦應設置薪資報酬委員會，且薪資報酬委員會所訂定股票已在證券交易所上市或於證券商營業處所買賣之公開發行股票公司董事、監察人及經理人酬金應包括薪資、股票選擇權與其他具有實質獎勵之措施。
+
 * 15 依本法經營之證券業務，其種類如左：一、有價證券之承銷及其他經主管機關核准之相關業務。二、有價證券之自行買賣及其他經主管機關核准之相關業務。三、有價證券買賣之行紀、居間、代理及其他經主管機關核准之相關業務。
 
 > 釋：世界各國證券商得經營業務之項目及範圍，因地區國家或時間之關係而有所不同，為擴大我國證券商得經營業務之範圍，及因應我國證券市場自由化、國際化之需要，有必要概括規定相關業務之項目，以避免掛一漏萬，爰於各款增訂概括規定。
