--- a/行政-經濟及能源/電業法.md
+++ b/行政-經濟及能源/電業法.md
@@ -148,7 +148,9 @@
 
 > 釋：一、第一項酌作文字修正及增訂第三項。二、針對電費之計收，現已採行一般家庭每月實際用電度數超過底度者，則以實際用電度數計收電費，不另加計底度費，為符法律明確化原則，爰增訂第三項。
 
-* 65 電業供給自來水、電車、電鐵路等公用事業用電，其收費應低於普通電價。但以不低於供電成本為準。
+* 65 電業供給自來水、電車、電鐵路等公用事業及各級公私立學校用電，其收費應低於普通電價，但以不低於供電成本為準。前項收費辦法，由中央主管機關定之。
+
+> 釋：一、現行的學校用電優惠措施雖已行之有年，最近卻被檢討以不具法源依據而有被取消之虞。僉以我國教育預算原已捉襟見肘，如取消電價優惠，勢將排擠原定教育計劃施政經費，且恐加深城鄉學校環境之差距，礙及學生受教權益及其健康與安全等。爰提案修正電業法第65 條，比照公用事業將各級公私立學校納入用電優惠對象，俾保障學校基本用電之需求，維護學生受教權益。二、增列第二項為：「前項收費辦法，由中央主管機關定之。」。
 
 * 66 電業供給公用路燈用電，其收費率應低於普通電價。但以不低於普通電燈價之半為準。
 
