消費者債務清理條例 2011.1.10

--- a/司法-民事/消費者債務清理條例.md
+++ b/司法-民事/消費者債務清理條例.md
@@ -18,6 +18,10 @@
 
 > 釋：一、更生及清算事件，明定專屬債務人之住所地之法院管轄，爰設第一項。二、債務人在我國無住所者，則由主要財產所在地之地方法院管轄，以杜爭議，爰設第二項。
 
+* 5.1 地方法院應設消費者債務清理專庭或專股辦理消費者債務清理事件。
+
+> 釋：一、本條新增。二、為謀迅速而適當審理更生與清算事件，消費者債務清理事件宜由專業法庭法官辦理，因部分員額較少或受理消債事件較少之地方法院，基於資源限制，無法成立消債專庭；故宜視各地方法院之具體情況，成立專庭或專股辦理消債事件，爰設本條。
+
 * 6 聲請更生或清算，徵收聲請費新臺幣一千元。郵務送達費及法院人員之差旅費不另徵收。但所需費用超過應徵收之聲請費者，其超過部分，依實支數計算徵收。前項所需費用及進行更生或清算程序之必要費用，法院得酌定相當金額，定期命聲請人預納之，逾期未預納者，除別有規定外，法院得駁回更生或清算之聲請。
 
 > 釋：一、本條第一項明定聲請更生或清算應徵收之費用。二、有關郵務送達費及法院人員之差旅費，在聲請費範圍內，為避免繁瑣不另徵收。惟如所需費用超過應徵收之聲請費者，其超過部分，仍應徵收，爰設第二項規定如何徵收。三、進行更生或清算程序所需第二項及其他必要費用，例如：監督人、管理人之報酬、郵務送達費等，法院於程序開始前，得預為估算，並定期間命債務人預納，如債務人未預納，除本條例別有規定外（例如：第七條），即應駁回更生或清算之聲請，爰設第三項。惟更生或清算之程序如經裁定開始後，為免法院及關係人已支付之勞力及費用歸於徒勞，即不得以債務人未預納必要費用而駁回之，應依第五十七條規定處理，附此敘明。
@@ -38,9 +42,9 @@
 
 > 釋：一、債務人之財產、收入及業務狀況，債務人之親屬、為債務人管理財產之人或其他關係人（例如：僱用人等）知之最詳，為確實掌握該部分資訊，明定渠等於法院查詢時，有答覆之義務，爰設第一項。二、為促使債務人之親屬、為債務人管理財產之人或其他關係人履行其答覆義務，渠等無故不為答覆或為虛偽之陳述時，法院得處以罰鍰並得連續處罰，爰設第二項、第三項。三、法院對債務人之親屬、為債務人管理財產之人或其他關係人處以罰鍰時，宜使其有陳述意見之機會，以保護其程序權，爰設第四項。四、第二項、第三項之裁定，影響被處罰人之權益甚大，爰設第五項，明定其提起抗告後，法院應停止執行。
 
-* 11 更生或清算事件之裁判，由獨任法官以裁定行之。抗告，由管轄之地方法院以合議裁定之。對於抗告法院之裁定，不得再為抗告。依本條例所為之裁定，不得聲請再審。
+* 11 更生或清算事件之裁判，由獨任法官以裁定行之。抗告，由管轄之地方法院以合議裁定之。對於抗告法院之裁定，除有涉及法律見解具有原則上之重要性者外，不得再為抗告。依本條例所為之裁定，不得聲請再審。
 
-> 釋：一、為使更生或清算事件迅速進行，明定該等事件由獨任法官辦理，其所為之處分，應以裁定為之，爰設第一項。二、為使更生或清算事件得以迅速確定，參考民事訴訟法第四百三十六條之一、非訟事件法第四十四條之立法例，明定抗告由管轄之地方法院以合議裁定之，爰設第二項。惟可提起抗告之人，以受不利益之裁定者為限。三、為使更生或清算程序迅速進行及終結，明定對於抗告法院之裁定不得再為抗告，且依本條例所為之裁定，亦不得聲請再審，爰設第三、四項。
+> 釋：一、縱立法之初，為使更生或清算事件得以迅速確定，避免訴訟之累，抗告由管轄之地方法院以合議裁定之。二、惟本條例施行至今，按原條文雖收速審之效，然抗告之裁定在全國地方法院間尚無法統一見解。就事實相近案件，於不同管轄法院審理，易因法律見解歧異，而發生裁判矛盾，使債務人及債權人受不利益之裁定，爰增列第三項條文，如有涉及法律見解具有原則上之重要性者外，得再抗告。。
 
 * 12 法院裁定開始更生或清算程序後，非經已申報無擔保及無優先權債權人全體同意，債務人不得撤回更生或清算之聲請。法院於裁定前，已依第十九條規定為保全處分者，亦同。更生或清算聲請之撤回，應以書狀為之。
 
@@ -126,9 +130,9 @@
 
 > 釋：一、匯票發票人或背書人受法院開始更生或清算程序之裁定時，付款人或預備付款人未必知悉，倘其因善意而承兌或付款者，為保障其求償權，應使該債權得為更生或清算債權，爰設第一項。二、於支票及其他以給付金錢或其他物件為標的之有價證券者，與第一項同有保護之必要，爰設第二項。
 
-* 33 債權人應於法院所定申報債權之期間內申報債權之種類、數額或其順位；其有證明文件者，並應提出之。債權人因非可歸責於己之事由，致未於前項所定期間申報債權者，得於其事由消滅後十日內補報之。但不得逾法院所定補報債權之期限。監督人或管理人收受債權申報，應於補報債權期限屆滿後，編造債權表，由法院公告之，並應送達於債務人及已知住居所、事務所或營業所之債權人。未選任監督人或管理人者，前項債權表，由法院編造之。
+* 33 債權人應於法院所定申報債權之期間內申報債權之種類、數額、順位之說明書；其有證明文件者，並應提出之。債權人為金融機構、資產管理公司時，應依前項規定提出債權說明書，並於說明書中表明下列事項：一、尚未清償之債權本金及借款日。二、利息及違約金之金額及其計算方式。三、債務人已償還金額。四、前款金額抵充費用、利息、本金之數額。五、其他債務人請求之事項，經法院認為適當者。債權人申報債權或補報債權未依前項第一款至第三款規定提出債權說明書者，法院應依債務人之聲請，以裁定定期命債權人補正。逾期未補正者，法院依第三十六條為裁定時，依全辯論意旨斟酌之。債權人因非可歸責於己之事由，致未於第一項所定期間申報債權者，得於其事由消滅後十日內補報之。但不得逾法院所定補報債權之期限。監督人或管理人收受債權申報，應於補報債權期限屆滿後，編造債權表，由法院公告之，並應送達於債務人及已知住居所、事務所或營業所之債權人。未選任監督人或管理人者，前項債權表，由法院編造之。
 
-> 釋：一、債權人於更生或清算程序應如何行使其權利，宜予明定，爰設第一項。又法院裁定開始更生或清算程序後，債權人非依上開程序不得行使其債權；且未於申報債權期限內申報債權者，可能產生失權之效果，附此敘明。二、債權人未依期限申報債權，係因不可歸責於己之事由，如仍不得依更生或清算程序受償，實非合理，此種情形，宜許其有補為申報之機會，爰設第二項，明定其得於事由消滅後十日內補報之。又依第四十七條第一項第三款、第八十七條第一項第四款規定，法院裁定開始更生或清算程序後，旋應酌定申報、補報債權之期間，並公告之，法院所定補報債權期限屆滿後，如許債權人再為補報，即有礙程序之進行及安定，為利程序之迅速進行，明定債權人非可歸責於己之事由消滅時，如已逾法院所定補報債權期限，債權人即不得再為補報，爰設但書予以除外。至債權人因此未為申報，屬不可歸責於己之事由，其得依其債權為更生債權或清算債權，分別依第七十四條但書、第一百三十九條第五款規定主張權利，乃屬當然。三、明定監督人或管理人收受債權申報之處理方式。監督人或管理人所作成之債權表除應由法院公告，以昭公信外，並應送達於債務人及已知住居所、事務所或營業所之債權人，以保障渠等權益。爰設第三項。四、法院未選任監督人或管理人時，宜由法院自行編造債權表，爰設第四項。
+> 釋：按法院訴訟輔導科擬定債權人之債權陳報狀參考範例，僅可得知本金、利息、違約金等債權總額，無法清楚呈現債務全貌、實質內容。為使債務人明瞭其所負擔之債務計算方式、及使法院可有詳確依據，爰明訂債權人應提供債權說明書及其應記載事項。
 
 * 34 消滅時效，因申報債權而中斷。
 
@@ -258,13 +262,13 @@
 
 > 釋：一、更生方案不為法院認可時，即不能依更生程序清理其債務，應由法院裁定開始清算程序。為使裁判一致，法院不認可更生方案及開始清算程序之裁定，允宜同時為之。爰設第一項。二、開始清算程序之裁定，係以法院不認更生方案為前提，法院不認可更生方案之裁定是否獲抗告法院維持，影響清算程序之存否，故對於不認可更生方案之裁定提起抗告者，該開始清算程序之裁定應並受抗告法院之裁判，以免裁判分歧，爰設第二項。三、法院為不認可更生方案之裁定時，應同時裁定開始清算程序，如旋即進行清算程序，於該不認可更生方案之裁定經抗告法院廢棄時，已進行之清算程序應如何處置，易滋疑義，爰設第三項，明定不認可更生方案之裁定確定時，始得進行清算程序。
 
-* 66 更生程序於更生方案認可裁定確定時終結。
+* 66 更生程序於更生方案認可裁定確定時終結。法院於認可裁定確定後，應依職權付與兩造確定證明書。
 
-> 釋：為促進程序，更生程序不置監督履行制度，其程序於更生方案認可裁定確定時終結，爰設本條。又更生程序既已終結，原依本條例第四十八條規定停止之強制執行程序，停止原因消滅，自應依本條例第七十條、第七十一條規定辦理。
+> 釋：一、第一項未修正。二、現行實務上，因債務人不知認可更生方案之裁定何時確定，待債權人於裁定確定後數月通知債務人履行時，往往要求其須一次給付自裁定確定後至受通知時起之數月金額；致債務人無力履行更生方案。故法院有必要依職權付與兩造確定證明書，使當事人明瞭其裁定之確定時間。爰增列第二項「法院於認可裁定確定後，應依職權付與兩造確定證明書。」，以資明確。
 
-* 67 更生方案經法院裁定認可確定後，除本條例別有規定外，對於全體債權人均有效力；其定有自用住宅借款特別條款者，該借款債權人並受拘束；對於債務人有求償權之共同債務人、保證人或為其提供擔保之第三人，亦同。
+* 67 更生方案經法院裁定認可確定後，除本條例別有規定外，對於全體債權人均有效力；其定有自用住宅借款特別條款者，該借款債權人並受拘束；對於債務人有求償權之共同債務人、保證人或為其提供擔保之第三人，亦同。債權人為金融機構者，債務人得以書面請求最大債權金融機構統一辦理收款及撥付款項之作業。
 
-> 釋：為促使債權人利用更生程序統一清理債務人之債務，以利債務人重建，爰明定更生方案一經法院裁定認可確定，除本條例別有規定外，不論債權人是否參加債權人會議、是否同意更生方案，均應受更生方案之拘束。又更生方案定有自用住宅借款特別條款者，如該方案之效力不及於自用住宅借款債權人，鼓勵債務人依更生方案履行債務，限制自用住宅借款債權人行使其擔保權，以確保債務人自用住宅不致喪失之目的即無以貫徹，故不論自用住宅特別條款係債務人依第五十四條規定與債權人協議，抑或依第五十五條規定定之，該自用住宅借款債權人均應受其拘束。再者，債務人之共同債務人、保證人或為其提供擔保之第三人清償債務人之債務後，承受債權人之權利，該債權之擔保及其他從屬權利亦隨同移轉於該共同債務人等，如該等債務人不受更生方案之拘束，復行使其擔保權，債務人之自用住宅仍有遭拍賣之虞，更生方案即無履行可能，爰明定對於債務人有求償權之共同債務人、保證人或為其提供擔保之第三人，亦受其拘束。
+> 釋：一、為使債務人於履行更生方案期間，得統一清償債權人之債務，避免分別繳納之累，爰增訂第二項條文。援用金融機構已建置之統一收款及撥付平台，提供債務人更為便利之還款管道。二、另因慎重起見且使金融機構代理收付有所依據，該項請求應以書面為之。
 
 * 68 更生不影響有擔保或有優先權之債權人之權利。但本條例別有規定或經該債權人同意者，不在此限。
 
@@ -602,6 +606,10 @@
 
 > 釋：一、為使債務人得自主解決其債務，爰設本條，明定債務人對於金融機構因消費借貸、自用住宅借款、信用卡或現金卡契約而負債務之情形，採行協商前置主義，債務人於聲請更生或清算前，應先行提出債權人清冊，以書面向其負債務之任一金融機構請求協商債務清償方案。又債務人請求協商債務清償方案時，得就近向其負債務之任一金融機構總行或分行為之，尚不以總行為限。二、為協商之必要，債務人之財產、收入、業務及信用狀況，宜使債權人明瞭，參照稅捐稽徵法有關納稅義務人授權、電腦處理個人資料保護法有關當事人書面同意等規定，明定債務人請求協商時，視為同意或授權受請求之金融機構得向稅捐或其他機關、團體（例如：地政機關、聯合徵信中心等）查詢之，爰設第二項。三、為便利債務人統一清理其債務，受債務人請求協商債務清償方案之金融機構，應即通知其他債權人與債務人為債務清償方案之協商，並將其查詢債務人之財產、收入、業務及信用狀況之結果供其他債權人閱覽或抄錄，爰設第三項。至其他債權人因閱覽、抄錄所生費用（例如：影印費等），提供閱覽、抄錄之金融機構得自行決定是否收費。四、債務清償方案協商成立者，攸關參與協商債權人、債務人之權益，為求慎重，債務清償方案應作成書面，並由當事人簽名、蓋章或按指印，於符合此等要式行為後，該債務清償方案始行成立。又協商不成立者，為便於債務人得據以聲請更生或清算，明定債權人應付與債務人協商不成立之證明書，俾其證明業經協商程序，爰設第四項。
 
+* 151.1 前條債務經金融機構出售予資產管理公司，如債務人依前條規定提出協商並成立者，資產管理公司應依該協商條件辦理。
+
+> 釋：一、本條新增。二、債務經金融機構出售予資產管理公司時，如債務人提出協商並經成立者，該資產管理公司即應依協商條件辦理。
+
 * 152 前條第一項受請求之金融機構應於協商成立之翌日起七日內，將債務清償方案送請金融機構所在地之管轄法院審核。但當事人就債務清償方案已依公證法第十三條第一項規定，請求公證人作成公證書者，不在此限。前項債務清償方案，法院應儘速審核，認與法令無牴觸者，應以裁定予以認可；認與法令牴觸者，應以裁定不予認可。前項裁定，不得抗告。債務清償方案經法院裁定認可後，得為執行名義。
 
 > 釋：一、為免債務人與債權人協商成立之債務清償方案有違反法令或無法強制執行情事，債務清償方案應送請法院審核，爰設第一項，明定受協商請求之金融機構，應於協商成立之翌日起七日內，將債務清償方案送請金融機構所在地之管轄法院審核。本項所定之「七日」期間為訓示期間，法院不得以金融機構逾七日始將債務清償方案送請審核而不予認可。又本項明定金融機構應將債務清償方案送請法院審核，除為避免債務清償方案有違反法令或無法強制執行情事外，亦為賦與其執行力，以利債權人行使債權，當事人就債務清償方案既已依公證法第十三條第一項規定，請求公證人作成公證書，法院審核之目的即可貫徹，自無再送請法院審核之必要，爰設但書予以除外。二、法院就協商成立之債務清償方案應儘速審核，如其內容與法令無牴觸，即應以裁定予以認可，如與法令相牴觸，則應不予認可，爰設第二項。又債務人與債權人成立協商，其性質為私法上之和解，法院就協商成立之債務清償方案予以認可，僅係賦與其執行力，非該等法律行為之成立要件，法院如以其牴觸法令而不予認可，該等法律行為仍應依其牴觸之法令認定其效力。三、法院審核債務清償方案，僅就該等方案有違反法令或無法強制執行等情事為審核，並未變更債務人與債權人協商之實體內容，自不許渠等對於該等裁定提起抗告。況法院為不認可之裁定時，債務人仍得聲請更生或清算，債權人、債務人之權益均未受影響，亦不許渠等對於該等裁定提起抗告。爰設第三項。四、為避免程序浪費，並提高債權人參與協商之意願，債務清償方案經法院裁定認可後，為便於債權人行使債權，宜賦與執行力，爰設第四項。
@@ -626,7 +634,7 @@
 
 > 釋：有關本條例施行之細則，宜授權由司法院定之，爰設本條。
 
-* 158 本條例自公布日後九個月施行。
+* 158 本條例自公布日後九個月施行。本條例中華民國一百年一月十日修正條文自公布日施行。本條例於中華民國一百年一月十日修正施行前，債務人已依第一百五十一條規定提出協商並成立者，資產管理公司應比照該協商條件逕向債務人協商。
 
-> 釋：為免卡債債務人對本條例之不當期待，對社會及經濟造成衝擊，爰規定自公布日施行。
+> 釋：一、第一項未修正二、明訂本次修正條文之施行日期，爰增列第二項「本條例中華民國一百年一月十日修正條文自公布日施行。」三、配合本條例增訂第一百五十一條之一，爰增設本條。使修正通過前已前置協商成立，且負擔資產管理公司債務者，亦得比照協商方案還款。
 
