政府採購法 2011.1.10

--- a/行政-預算及主計/政府採購法.md
+++ b/行政-預算及主計/政府採購法.md
@@ -38,9 +38,9 @@
 
 > 釋：一、明定主管機關掌理之事項。二、按未來我國政府採購制度之設計，將從現行之事前審計改為事後審計，現行採購屬於事前審計之監督功能，將由行政體系中之上級機關及主管機關擔任；另為使政府採購能公開化、透明化，有關採購資訊之蒐集、公告需專責機關辦理，並將設置異議及申訴制度，故主管機關掌理採購政策之研訂、採購法令之修訂、中央機關採購申訴之處理、採購資訊之蒐集、公告及人員之訓練等有助於健全政府採購體制運作之業務。
 
-* 11 主管機關應設立採購資訊中心，統一蒐集共通性商情及同等品分類之資訊，並建立工程材料、設備之價格資料庫，以供各機關採購預算編列及底價訂定之參考。除應秘密之部分外，應無償提供廠商。主管機關得設採購人員訓練所，統一培訓專業採購人員。
+* 11 主管機關應設立採購資訊中心，統一蒐集共通性商情及同等品分類之資訊，並建立工程價格資料庫，以供各機關採購預算編列及底價訂定之參考。除應秘密之部分外，應無償提供廠商。機關辦理工程採購之預算金額達一定金額以上者，應於決標後將得標廠商之單價資料傳輸至前項工程價格資料庫。前項一定金額、傳輸資料內容、格式、傳輸方式及其他相關事項之辦法，由主管機關定之。財物及勞務項目有建立價格資料庫之必要者，得準用前二項規定。
 
-> 釋：將第一項前段之「得」字，改為「應」。在於公共工程委員會屬主管機關，本應蒐集、統籌所有政府採購資訊，提供各界參考。另將後段修正成政府採購資訊必須無償提供與廠商。如此方能吸引眾多廠商參予競標，進而讓政府單位有更多選擇，並提升我國政府採購之品質。
+> 釋：一、第一項工程價格資料庫所蒐集之內容，目前已包括勞務單價，不限於材料、設備，爰刪除原條文「材料、設備之」文字。二、為利主管機關充實價格資料庫內容，增訂第二項及第三項，明定機關應傳輸相關決標單價至指定之資料庫；並授權主管機關就一定金額、傳輸資料及其他相關事項等，訂定辦法予以規範。三、增訂第四項，明定可準用工程價格資料庫之模式，建立財物及勞務項目之價格資料庫，例如資訊服務之分類、分級人月之單價資料等。四、原條文第二項之規定，與其他各項規定性質有別，與修正條文第九十五條採購專業人員相關，爰移列修正條文第九十五條第二項。
 
 * 12 機關辦理查核金額以上採購之開標、比價、議價、決標及驗收時，應於規定期限內，檢送相關文件報請上級機關派員監辦；上級機關得視事實需要訂定授權條件，由機關自行辦理。機關辦理未達查核金額之採購，其決標金額達查核金額者，或契約變更後其金額達查核金額者，機關應補具相關文件送上級機關備查。查核金額由主管機關定之。
 
@@ -202,9 +202,9 @@
 
 > 釋：一、第一項明定投標文件之審查及得通知廠商對疑義之處提出說明。二、第二項明定審查結果之通知。
 
-* 52 機關辦理採購之決標，應依下列原則之一辦理，並應載明於招標文件中：一、訂有底價之採購，以合於招標文件規定，且在底價以內之最低標為得標廠商。二、未訂底價之採購，以合於招標文件規定，標價合理，且在預算數額以內之最低標為得標廠商。三、以合於招標文件規定之最有利標為得標廠商。四、採用複數決標之方式：機關得於招標文件中公告保留採購項目或數量選擇之組合權利，但應合於最低價格或最有利標之競標精神。機關採前項第三款決標者，以異質之工程、財物或勞務採購而不宜以前項第一款或第二款辦理者為限。決標時得不通知投標廠商到場，其結果應通知各投標廠商。
+* 52 機關辦理採購之決標，應依下列原則之一辦理，並應載明於招標文件中：一、訂有底價之採購，以合於招標文件規定，且在底價以內之最低標為得標廠商。二、未訂底價之採購，以合於招標文件規定，標價合理，且在預算數額以內之最低標為得標廠商。三、以合於招標文件規定之最有利標為得標廠商。四、採用複數決標之方式：機關得於招標文件中公告保留採購項目或數量選擇之組合權利，但應合於最低價格或最有利標之競標精神。機關採前項第三款決標者，以異質之工程、財物或勞務採購而不宜以前項第一款或第二款辦理者為限。機關辦理公告金額以上之專業服務、技術服務或資訊服務者，得採不訂底價之最有利標。決標時得不通知投標廠商到場，其結果應通知各投標廠商。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、第一項第一款及第二款文字中，其中第二個「於」字均改為「在」字。二、增訂第三項：於本法本條內，明確載明「機關辦理公告金額以上之專業服務、技術服務或資訊服務者，得採不訂底價之最有利標。」三、原第三項順移為第四項。
 
 * 53 合於招標文件規定之投標廠商之最低標價超過底價時，得洽該最低標廠商減價一次；減價結果仍超過底價時，得由所有合於招標文件規定之投標廠商重新比減價格，比減價格不得逾三次。前項辦理結果，最低標價仍超過底價而不逾預算數額，機關確有緊急情事需決標時，應經原底價核定人或其授權人員核准，且不得超過底價百分之八。但查核金額以上之採購，超過底價百分之四者，應先報經上級機關核准後決標。
 
@@ -246,9 +246,9 @@
 
 > 釋：明定決標資料之彙送，俾便主管機關掌握並瞭解各機關辦理招標案件之結果，並供統計分析之用。
 
-* 63 各類採購契約之要項，由主管機關參考國際及國內慣例定之。委託規劃、設計、監造或管理之契約，應訂明廠商規劃設計錯誤，監造不實或管理不善，致機關遭受損害之責任。
+* 63 各類採購契約以採用主管機關訂定之範本為原則，其要項及內容由主管機關參考國際及國內慣例定之。委託規劃、設計、監造或管理之契約，應訂明廠商規劃設計錯誤、監造不實或管理不善，致機關遭受損害之責任。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、第一項增訂各類採購契約以採用主管機關訂定之範本為原則，以降低個案採購契約不完整或未符公平合理原則之情形。二、第二項「應訂明廠商規劃設計」文字後補漏列「錯誤」二字。
 
 * 64 採購契約得訂明因政策變更，廠商依契約繼續履行反而不符公共利益者，機關得報經上級機關核准，終止或解除部分或全部契約，並補償廠商因此所生之損失。
 
