--- a/行政-經濟及能源/電業法.md
+++ b/行政-經濟及能源/電業法.md
@@ -136,11 +136,17 @@
 
 * 61 電業對於特種用戶，得另定收費辦法，報請地方主管機關備查。
 
-* 62 電業向用戶收取電費，應儘量裝置電度表，以度數計算。
+* 62 電業向用戶收取電費，除包制用電外，應裝置電度表，以度數計算。前項每度收費之金額，應報請中央主管機關核准。
 
-* 63 用戶電度表由電業置備。但得向用戶酌收電表保證金，其金額不得超過其裝置時之市價，不收保證金者，得酌收租金。
+> 釋：一、第一項增列包制用電，所稱包制用電係指路燈、交通指揮燈、交通監控設備、公車候車亭、警報器等用電器具容量小且固定、用電時間穩定及不易覓得適當裝表位置之用電。另要求電業應為用戶裝置電度表，以精確計算用電度數。二、新增第二項，規定電業每度電費之計算方式應報中央主管機關核准，避免市場獨占造成不合理剝削。
 
-* 64 電業向用戶收取電費，得規定每月底度。但不得逾左列之限制：一、電燈：用單相電度表者，一級二級電業每安培二度，三級電業每安培三度，四級電業每安培四度。用三相電度表者，照單相電度表三倍計算，不滿三安培電度表，得酌量提高底度。二、電力：一級二級電業每裝見馬力二十五度，三級電業每裝見馬力三十五度，四級電業每裝見馬力四十五度。三、電熱：工業用者，準用電力之規定；家庭用者，準用電燈之規定。電業收取電費不規定底度者，得規定每月最低電費。
+* 63 用戶電度表由電業置備，得向用戶酌收電表保證金，不收保證金者，得酌收租金，其保證金或租金金額合計不得超過其裝置時之市價。
+
+> 釋：文字酌作修正，不論收取保證金或租金其總額不應超過裝置時之市價。
+
+* 64 電業向用戶收取電費，得規定每月底度。但不得逾下列之限制：一、電燈：用單相電度表者，一級二級電業每安培二度，三級電業每安培三度，四級電業每安培四度。用三相電度表者，照單相電度表三倍計算，不滿三安培電度表，得酌量提高底度。二、電力：一級二級電業每裝見馬力二十五度，三級電業每裝見馬力三十五度，四級電業每裝見馬力四十五度。三、電熱：工業用者，準用電力之規定；家庭用者，準用電燈之規定。電業收取電費不規定底度者，得規定每月最低電費。電業定有第一項每月底度者，其用戶每月實際用電度數超過每月底度時，以實際用電度數計收。
+
+> 釋：一、第一項酌作文字修正及增訂第三項。二、針對電費之計收，現已採行一般家庭每月實際用電度數超過底度者，則以實際用電度數計收電費，不另加計底度費，為符法律明確化原則，爰增訂第三項。
 
 * 65 電業供給自來水、電車、電鐵路等公用事業用電，其收費應低於普通電價。但以不低於供電成本為準。
 
