行政訴訟法 2011.5.6

--- a/司法-行政訴訟/行政訴訟法.md
+++ b/司法-行政訴訟/行政訴訟法.md
@@ -222,9 +222,9 @@
 
 * 72 送達於住居所、事務所、營業所或機關所在地不獲會晤應受送達人者，得將文書付與有辨別事理能力之同居人、受雇人或願代為收受而居住於同一住宅之主人。前條所定送達處所之接收郵件人員，視為前項之同居人或受雇人。如同居人、受雇人、居住於同一住宅之主人或接收郵件人員為他造當事人者，不適用前二項之規定。
 
-* 73 送達不能依前二條規定為之者，得將文書寄存於送達地之自治或警察機關，並作送達通知書二份，一份黏貼於應受送達人住居所、事務所或營業所門首，一份交由鄰居轉交或置於應受送達人之信箱或其他適當之處所，以為送達。前項情形，如係以郵務人員為送達人者，得將文書寄存於附近之郵務機構。寄存送達，自寄存之日起，經十日發生效力。寄存之文書自寄存之日起，寄存機關或機構應保存二個月。
+* 73 送達不能依前二條規定為之者，得將文書寄存於送達地之自治或警察機關，並作送達通知書二份，一份黏貼於應受送達人住居所、事務所或營業所門首，一份交由鄰居轉交或置於應受送達人之信箱或其他適當之處所，以為送達。前項情形，如係以郵務人員為送達人者，得將文書寄存於附近之郵政機關。寄存送達，自寄存之日起，經十日發生效力。寄存之文書自寄存之日起，寄存機關應保存三個月。
 
-> 釋：一、為配合郵政總局改制為中華郵政股份有限公司，爰將「郵政機關」修正為「郵務機構」。二、行政訴訟文書寄存送達之生效日期，應無與民、刑事訴訟文書為不同處理之必要。而民事訴訟法第一百三十八條之規定於修正後增訂第三項，規定寄存送達，自寄存之日起，經十日發生效力，爰參照增訂之，並列為第三項，期臻一致。三、原第三項規定寄存之文書，寄存機關應自寄存之日起，保存三個月。惟民事訴訟法第一百三十八條第三項之保存期間規定為二個月，而刑事訴訟法第六十二條亦明定準用民事訴訟法上開規定，為避免寄存機關之困擾，爰修正本項之保存期間為二個月，並將寄存「機關」增列「或機構」。又本項關於保存期限二個月屆滿後，為避免寄存機關或機構之困擾以及實務上運作方便，以送還法院保管為宜。
+> 釋：一、照黨團協商條文通過。二、將第二項句末之「郵務機構」修正為「郵政機關」。三、將第四項句末之「寄存機關或機構應保存二個月」修正為「寄存機關應保存三個月」。
 
 * 74 應受送達人拒絕收領而無法律上理由者，應將文書置於送達處所，以為送達。前項情形，如有難達留置情事者，準用前條之規定。
 
@@ -686,9 +686,9 @@
 
 * 228 第二百二十四條至第二百二十六條之規定，於前條第二項情形準用之。
 
-* 229 適用簡易訴訟程序之事件，以地方法院行政訴訟庭為第一審管轄法院。下列各款行政訴訟事件，除本法別有規定外，適用本章所定之簡易程序：一、關於稅捐課徵事件涉訟，所核課之稅額在新臺幣四十萬元以下者。二、因不服行政機關所為新臺幣四十萬元以下罰鍰處分而涉訟者。三、其他關於公法上財產關係之訴訟，其標的之金額或價額在新臺幣四十萬元以下者。四、因不服行政機關所為告誡、警告、記點、記次或其他相類之輕微處分而涉訟者。五、依法律之規定應適用簡易訴訟程序者。前項所定數額，司法院得因情勢需要，以命令減為新臺幣二十萬元或增至新臺幣六十萬元。
+* 229 下列各款行政訴訟事件，適用本章所定之簡易程序：一、關於稅捐課徵事件涉訟，所核課之稅額在新臺幣二十萬元以下者。二、因不服行政機關所為新臺幣二十萬元以下罰鍰處分而涉訟者。三、其他關於公法上財產關係之訴訟，其標的之金額或價額在新臺幣二十萬元以下者。四、因不服行政機關所為告誡、警告、記點、記次或其他相類之輕微處分而涉訟者。五、依法律之規定應適用簡易訴訟程序者。前項所定數額，司法院得因情勢需要，以命令減為新臺幣十萬元或增至新臺幣五十萬元。
 
-> 釋：一、明定適用簡易訴訟程序之事件，以地方法院行政訴訟庭為第一審管轄法院。二、關於交通裁決事件，本法第二編第三章已另訂特殊救濟程序，不屬簡易訴訟程序事件，爰將原第一項條文移列為第二項，並增加除外規定。
+> 釋：一、為配合公文直式橫書格式，爰將第一項本文「左列」修正為「下列」。二、本條原定適用簡易程序之金額或價額，依當今之國民生活水準已屬過低，為因應社會經濟發展需要，並參酌民事訴訟法第四百二十七條之規定，爰將第一項第一款至第三款之金額或價額修正為新臺幣二十萬元以下。第二項之數額修正為新臺幣十萬元及五十萬元。
 
 * 230 前條第二項第一款至第三款之訴，因訴之變更，致訴訟標的之金額或價額逾新臺幣四十萬元者，其辯論及裁判改依通常訴訟程序之規定，地方法院行政訴訟庭並應裁定移送管轄之高等行政法院；追加之新訴或反訴，其訴訟標的之金額或價額逾新臺幣四十萬元，而以原訴與之合併辯論及裁判者，亦同。
 
@@ -771,6 +771,10 @@
 * 240 當事人於高等行政法院判決宣示、公告或送達後，得捨棄上訴權。當事人於宣示判決時，以言詞捨棄上訴權者，應記載於言詞辯論筆錄；如他造不在場，應將筆錄送達。
 
 * 241 提起上訴，應於高等行政法院判決送達後二十日之不變期間內為之。但宣示或公告後送達前之上訴，亦有效力。
+
+* 241.1 對於高等行政法院判決上訴，上訴人應委任律師為訴訟代理人。但有下列情形之一者，不在此限：一、上訴人或其法定代理人具備律師資格或為教育部審定合格之大學或獨立學院公法學教授、副教授者。二、稅務行政事件，上訴人或其法定代理人具備會計師資格者。三、專利行政事件，上訴人或其法定代理人具備專利師資格或依法得為專利代理人者。非律師具有下列情形之一，經最高行政法院認為適當者，亦得為上訴審訴訟代理人：一、上訴人之配偶、三親等內之血親、二親等內之姻親具備律師資格者。二、稅務行政事件，具備會計師資格者。三、專利行政事件，具備專利師資格或依法得為專利代理人者。四、上訴人為公法人、中央或地方機關、公法上之非法人團體時，其所屬專任人員辦理法制、法務、訴願業務或與訴訟事件相關業務者。民事訴訟法第四百六十六條之一第三項、第四項、第四百六十六條之二及第四百六十六條之三之規定，於前二項準用之。
+
+> 釋：一、本條新增。二、行政訴訟之上訴審為法律審（行政訴訟法第二百四十二條參照），上訴理由必須具體指摘高等行政法院判決有如何違背法令之情形，此須有專業法律素養者，始能勝任。為貫徹法律審之功能，及保障當事人權益，爰參照民事訴訟法第四百六十六條之一第一項規定，於上訴審採律師強制代理制。但上訴人或其法定代理人具有律師資格或為教育部審定合格之大學或獨立學院公法學教授、副教授者；稅務行政事件，上訴人或其法定代理人具備會計師資格者；專利行政事件，上訴人或其法定代理人具備專利師資格或依法得為專利代理人者，因其已有專業素養，應無再強制其委任律師為訴訟代理人之必要，爰設本條第一項之規定。三、參照民事訴訟法第四百六十六條之一第二項及行政訴訟法第四十九條第二項規定，上訴人之配偶、三親等內之血親、二親等內之姻親具有律師資格者；稅務行政事件，具備會計師資格者；專利行政事件，具備專利師資格或依法得為專利代理人者；上訴人為公法人、中央或地方機關、公法上之非法人團體時，其所屬專任人員辦理法制、法務、訴願業務或與訴訟事件相關業務者，如經最高行政法院認為適當，亦應許其為上訴審之訴訟代理人，爰設本條第二項之規定。四、是否符合第一項但書及第二項之要件，而得為律師強制代理之例外，上訴人應於提起上訴或委任時釋明之，以便法院審查；上訴人未依第一、二項規定委任訴訟代理人，或雖依第二項委任，最高行政法院認為不適當者，如何處理，應予明文規定。又上訴審之上訴既採律師強制代理制，則對於無資力委任訴訟代理人者，應使其得依訴訟救助之規定，聲請最高行政法院為之選任律師為其訴訟代理人；且採律師強制代理制，則委任律師所支付之酬金，為進行訴訟所必要之費用，應為訴訟費用之一部，惟當事人約定之酬金如過高，全數由他造負擔，並不合理，亦應限定其最高額。上開事項，民事訴訟法第四百六十六條之一第三項、第四項、第四百六十六條之二及第四百六十六條之三設有規定，依其性質，於行政訴訟可準用，爰於第三項明定之。
 
 * 242 對於高等行政法院判決之上訴，非以其違背法令為理由，不得為之。
 
